adjust main layout component

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -31,7 +31,7 @@
 
 @layer components {
   main {
-    @apply lg:px-[20%] lg:w-full lg:min-h-screen lg:my-0 lg:mx-auto
+    @apply lg:max-w-4xl lg:w-full lg:min-h-screen lg:my-0 lg:mx-auto
     sm:px-8  px-4  bg-secondary01;
   }
 }
