--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,33 +1,10 @@
 /* ./assets/css/tailwind.css */
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700;900&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  @font-face {
-    font-family: 'Noto Sans TC';
-    font-weight: 300;
-    src: url('assets/fonts/NotoSansTC-Light.otf') format('opentype');
-  }
-  @font-face {
-    font-family: 'Noto Sans TC';
-    font-weight: 400;
-    src: url('assets/fonts/NotoSansTC-Regular.otf') format('opentype');
-  }
-  @font-face {
-    font-family: 'Noto Serif TC';
-    font-weight: 700;
-    src: url('assets/fonts/NotoSerifTC-Bold.otf') format('opentype');
-  }
-  @font-face {
-    font-family: 'Noto Serif TC';
-    font-weight: 900;
-    src: url('assets/fonts/NotoSerifTC-Black.otf') format('opentype');
-  }
-}
 
 @layer components {
   main {
